baml_language/crates/baml_lsp_actions_tests/test_files/syntax/client/required_provider.baml
client<llm> MyClient {
  options {
    max_tokens 100
  }
}

// error: Error validating: Missing `provider` field in client. e.g. `provider openai`
//   -->  client/required_provider.baml:1
//    |
//    |
//  1 | client<llm> MyClient {
//  2 |   options {
//  3 |     max_tokens 100
//  4 |   }
//  5 | }
//    |

//----
//- diagnostics
// Error: Missing `provider` field in client. e.g. `provider openai`
//    в•ӯв”Җ[ client_required_provider.baml:1:1 ]
//    в”Ӯ
//  1 в”Ӯ в•ӯв”Җв–¶ client<llm> MyClient {
//    в”Ҷ в”Ҷ   
//  5 в”Ӯ в”ңв”Җв–¶ }
//    в”Ӯ в”Ӯ       
//    в”Ӯ в•°в”Җв”Җв”Җв”Җв”Җв”Җв”Җ Missing `provider` field in client. e.g. `provider openai`
//    в”Ӯ     
//    в”Ӯ     Note: Error code: E0026
// в”Җв”Җв”Җв•Ҝ
